@@ -480,3 +480,5 @@ Glue the shards of pottery and you'll have a china.
 Ever faced a Greater Titan Sorceror?
 They say that genius is but one remove from idiot.
 "You can't have everything.  Where would you put it?" -- Steven Wright
+They say that wilderness caves can be too nasty for novice dungeoneers.
+They say that potion of blindness can give greater boost than that of speed.
