@@ -413,4 +413,5 @@ Change list for PernMangband
 - Horizontal recall ({@RW17,22}) supported?
 - 'Cannot run' / 'Delayed run' bug fixed.
 - World-coodination display for '@' screen.
+- Player-location is shown on 'M'(Map) screen. (wilderness map is disabled)
 
